# F9_talk

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build_deb.sh  deny.toml  dist-workspace.toml  install.sh  pyproject.toml  run.sh
.cargo/: config.toml
.github/workflows/: appimage.yml  ci.yml  release.yml  rust-ci.yml
crates/app/: Cargo.toml
crates/app/src/: install.rs  main.rs
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/input/: Cargo.toml
crates/input/src/: hotkey.rs  lib.rs  typer.rs
crates/input/src/typer/: linux.rs  macos.rs  mod.rs  windows.rs
crates/stt/: Cargo.toml
crates/stt/src/: assemblyai.rs  deepgram.rs  lib.rs  whisper.rs
crates/translate/: Cargo.toml
crates/translate/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: indicator.rs  keys_dialog.rs  lib.rs  positioning.rs  tray.rs
docs/: architecture.md
docs/superpowers/specs/: 2026-05-08-api-keys-dialog-design.md  2026-05-08-tray-icon-design.md
f9_talk/: __init__.py  __main__.py  app.py  cli.py
f9_talk/audio/: __init__.py  mic.py
f9_talk/input/: __init__.py  hotkey.py  typer.py
f9_talk/stt/: __init__.py  assemblyai.py  deepgram.py  gladia.py  local_whisper.py
f9_talk/translate/: __init__.py  lingva.py  mymemory.py
f9_talk/ui/: __init__.py  indicator.py  keys_dialog.py  tray.py
packaging/: README.md
packaging/appimage/: build-appimage.sh
packaging/debian/: postinst  postrm
packaging/debian/applications/: f9-talk.desktop
packaging/debian/autostart/: f9-talk.desktop
packaging/debian/udev/: 99-f9-talk.rules
scripts/: benchmark.py
tests/: conftest.py
tests/unit/: test_app.py  test_hotkey.py  test_keys_dialog.py  test_lock.py  test_mic.py  test_secrets.py  test_session.py  test_translate.py  test_tray.py  test_typer.py
