[project]
name = "f9-talk"
version = "0.3.0"
description = "Hold-to-talk system-wide dictation for Linux. Cloud or local STT, audio-reactive overlay, optional translation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Moamen Ghareeb", email = "moamen.ghareeb.11@gmail.com"}]
keywords = ["dictation", "stt", "speech-to-text", "deepgram", "whisper", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "deepgram-sdk>=4,<5",
    "websockets>=12",
    "PySide6>=6.7",
    "pynput>=1.7.7",
    "numpy>=1.26",
    "requests>=2.31",
    "soundfile>=0.12",
]

[project.optional-dependencies]
local = [
    # Local STT path: faster-whisper on CUDA. Pulls in ctranslate2 + nvidia cu12 libs.
    "faster-whisper>=1.0",
    "ctranslate2>=4.4",
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cuda-nvrtc-cu12",
]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
    "ruff>=0.6",
]

[project.scripts]
f9-talk = "f9_talk.cli:main"

[project.urls]
Homepage = "https://github.com/moamen1358/F9_talk"
Issues = "https://github.com/moamen1358/F9_talk/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["f9_talk*"]

[tool.setuptools.package-data]
f9_talk = ["assets/*.png", "assets/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
