[package]
name = "f9-talk-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "F9 Talk: cpal microphone streamer with auto-restart."

[lib]
path = "src/lib.rs"

[dependencies]
f9-talk-core = { path = "../core" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
cpal = { workspace = true }
