[package]
name = "f9-talk-input"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "F9 Talk: hotkey listener + uinput typer."

[lib]
path = "src/lib.rs"

[features]
default = []
ydotool-fallback = []

[dependencies]
f9-talk-core = { path = "../core" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
hotkey-listener = { workspace = true }
evdev = { workspace = true }
anyhow = { workspace = true }
