[package]
name = "f9-talk-stt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "F9 Talk: STT backend trait + AssemblyAI / Deepgram / local Whisper impls."

[lib]
path = "src/lib.rs"

[features]
default = []
# `cuda` and `cpu-only` are wired in M2 once whisper-rs is added back.
cuda = []
cpu-only = []

[dependencies]
f9-talk-core = { path = "../core" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
# Networking deps gated behind impl modules (added in M2 when each backend is wired).
# tokio-tungstenite = { workspace = true }
# url = { workspace = true }
# reqwest = { workspace = true }
# whisper-rs links against libclang + CUDA (added when whisper backend lands).
# whisper-rs = { version = "0.14", optional = true, features = ["cuda"] }
