[package]
name = "f9-talk-stt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "F9 Talk: STT backend trait + AssemblyAI / Deepgram / local Whisper impls."

[lib]
path = "src/lib.rs"

[features]
default = []
# `cuda` and `cpu-only` are wired in M2 once whisper-rs is added back.
cuda = []
cpu-only = []

[dependencies]
f9-talk-core = { path = "../core" }
f9-talk-audio = { path = "../audio" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
url = { workspace = true }
futures-util = "0.3"
parking_lot = { workspace = true }
anyhow = { workspace = true }
# whisper-rs lands when WhisperLocal is wired (links libclang + CUDA).
# whisper-rs = { version = "0.14", optional = true, features = ["cuda"] }
